<resources>
    <string name="app_name">Tracks</string>
    <string name="channel_name">Tracks</string>
    <string name="channel_description">Tracks Channel</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_btn_register">Register</string>
    <string name="register_btn">Register</string>
    <string name="hint_name">Name</string>
    <string name="register_et_name">Username</string>
    <string name="RegisterPasswordET">Password</string>
    <string name="txt_name">Your full name:</string>
    <string name="txt_username">Your username:</string>
    <string name="txt_password">Your password:</string>
    <string name="post_txt_title">Create new post</string>
    <string name="post_txt_post_title">Post title</string>
    <string name="hint_post_title">Missing Dog in Kingsland…</string>
    <string name="post_txt_post_desc">Enter a description</string>
    <string name="hint_desc">Description…</string>
    <string name="post_btn_post">Post</string>
    <string name="title_activity_login">Tracks</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="email_incorrect">Incorrect Email</string>
    <string name="loading_posts">Loading Posts</string>
    <string name="posts_title">TITLE</string>
    <string name="posts_author">By: AUTHOR</string>
    <string name="posts_date">Posted On: DATE</string>
    <string name="posts_description">DESCRIPTION</string>
    <string name="loading_comments">Loading Comments</string>
    <string name="comments_error">Post Not Found</string>
    <string name="comments_none_exists">No Comments exists, be the first to comment!</string>
    <string name="prompt_comment">Write a comment…</string>
    <string name="action_comment">Comment</string>
    <string name="discard">Discard</string>
    <string name="open_action_bar">Open</string>
    <string name="close_action_bar">Close</string>
    <string name="edit">Edit Details</string>
    <string name="logout">Logout</string>
    <string name="open_feed">Open Feed</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_my_posts">My Posts</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_log_out">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="pop_found">Mark as \"Found\"</string>
    <string name="pop_edit">Edit Post</string>
    <string name="pop_delete">Delete Post</string>
    <string name="demo_title">Google Maps API Demos</string>
    <string name="no_demos">No demos</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map_demo_label">Basic Map</string>
    <string name="basic_map_demo_description">Launches a map.</string>
    <string name="buildings">Buildings</string>
    <string name="camera_demo_label">Camera</string>
    <string name="camera_demo_description">Demonstrates camera functions.</string>
    <string name="circle_demo_label">Circles</string>
    <string name="circle_demo_description">Demonstrates how to add Circles to a map.</string>
    <string name="camera_clamping_demo_label">Camera Clamping</string>
    <string name="camera_clamping_demo_description">Demonstrates how to constrain the camera to specific boundaries and
        zoom levels.
    </string>
    <string name="clamp_latlng_adelaide">Clamp to Adelaide</string>
    <string name="clamp_latlng_pacific">Clamp to Pacific</string>
    <string name="clamp_latlng_reset">Reset LatLng Bounds</string>
    <string name="clamp_min_zoom">MinZoom++</string>
    <string name="clamp_max_zoom">MaxZoom--</string>
    <string name="clamp_zoom_reset">Reset Zoom Bounds</string>
    <string name="clear_map">Clear</string>
    <string name="clickable">Clickable</string>
    <string name="color">Color</string>
    <string name="compass">Compass</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="duration">Custom Duration</string>
    <string name="events_demo_label">Events</string>
    <string name="events_demo_description">Demonstrates event handling.</string>
    <string name="fade_in">Fade In Tiles</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="flat">Flat</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_santorini">Go to Santorini</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="ground_overlay_demo_label">Ground Overlays</string>
    <string name="ground_overlay_demo_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hue">Hue</string>
    <string name="hybrid">Hybrid</string>
    <string name="indoor">Indoor</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string name="layers_demo_label">Layers</string>
    <string name="layers_demo_description">Demonstrates the different map layers.</string>
    <string name="left_arrow">\u2190</string>
    <string name="location_source_demo_label">Location Source Demo</string>
    <string name="location_source_demo_description">Demonstrates how to use a custom location source.</string>
    <string name="map_circle_description">Google Map with circles.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="map_in_pager_demo_label">Map In Pager</string>
    <string name="map_in_pager_demo_description">Demonstrates how to add a map to a ViewPager.</string>
    <string name="marker_demo_label">Markers</string>
    <string name="marker_close_info_window_on_retap_demo_label">Marker Close Info Window on Retap</string>
    <string name="marker_close_info_window_on_retap_demo_description">Demonstrates how to close the info window when the
        currently selected marker is retapped.
    </string>
    <string name="marker_demo_description">Demonstrates how to add Markers to a map.</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="multi_map_demo_label">Multiple Maps</string>
    <string name="multi_map_demo_description">Demonstrates how to show multiple maps in a single activity.</string>
    <string name="my_location">My Location</string>
    <string name="my_location_demo_label">My Location Demo</string>
    <string name="my_location_demo_description">Demonstrates how to use GMS Location.</string>
    <string name="mylocation_button">My Location Button</string>
    <string name="mylocation_layer">My Location Layer</string>
    <string name="none_map">None</string>
    <string name="normal">Normal</string>
    <string name="options_demo_label">Options</string>
    <string name="options_demo_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="polygon_demo_label">Polygons</string>
    <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polyline_demo_label">Polylines</string>
    <string name="polyline_demo_description">Demonstrates how to add Polylines to a map.</string>
    <string name="programmatic_demo_label">Programmatically add map</string>
    <string name="programmatic_demo_description">Demonstrates how to add a MapFragment programmatically.</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="properties_australia_polyline">Properties for Polyline over Australia</string>
    <string name="properties_australia_polygon">Properties for Polygon over Australia</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="raw_map_view_demo_label">Raw MapView</string>
    <string name="raw_map_view_demo_description">Demonstrates how to use a raw MapView.</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map_demo_label">Retain map</string>
    <string name="retain_map_demo_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="rotation">Rotation:</string>
    <string name="satellite">Satellite</string>
    <string name="save_state_demo_label">Save the state of a MapFragment.</string>
    <string name="save_state_demo_description">Demonstrates how to save the state of a MapFragment upon rotation of the
        device.
    </string>
    <string name="save_state_instructions">Drag the marker, tap on it to change its color and rotate the device to check
        that the state of the map is preserved.
    </string>
    <string name="scroll">Scroll Gestures</string>
    <string name="snapshot_clear_button">Clear</string>
    <string name="snapshot_demo_label">Snapshot</string>
    <string name="snapshot_demo_description">Demonstrates how to take a snapshot of the map.</string>
    <string name="snapshot_holder_description">Area for the map snapshot.</string>
    <string name="snapshot_take_button">Take snapshot</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_alpha">Stroke Alpha</string>
    <string name="stroke_hue">Stroke Hue</string>
    <string name="stroke_joint_type">Stroke Joint Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="swipe">\u2190 Swipe \u2192</string>
    <string name="switch_image">Switch Image</string>
    <string name="tags_demo_label">Tags</string>
    <string name="tags_demo_description">Demonstrates how to get and set tags on API objects.</string>
    <string name="tags_demo_map_description">Map with a circle, ground overlay, marker, polygon and polyline.</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="terrain">Terrain</string>
    <string name="tile_coordinate_demo_label">Tile Coordinate Overlay</string>
    <string name="tile_coordinate_demo_description">Demonstrates how to add a tile overlay with tile coordinates to a
        map.
    </string>
    <string name="tile_overlay_demo_label">Tile Overlays</string>
    <string name="tile_overlay_demo_description">Demonstrates how to add a tile overlay to a map.</string>
    <string name="tilt">Tilt Gestures</string>
    <string name="tilt_less">\u2193</string>
    <string name="tilt_more">\u2191</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="ui_settings_demo_label">UI Settings</string>
</resources>