<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_et_password" android:layout_marginTop="8dp"
            android:hint="@string/hint_password"
            app:layout_constraintTop_toBottomOf="@+id/register_et_username" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintVertical_bias="0.12"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_et_name"
            android:ems="10"
            android:hint="@string/hint_name"
            android:id="@+id/register_et_name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/register_et_username" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.721"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/register_et_username"
            android:hint="@string/hint_username"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.35"/>
    <Button
            android:text="@string/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_et_password" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.185"/>
    <TextView
            android:text="@string/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_txt_name" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/register_et_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/register_txt_username" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_et_name" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/register_et_username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnRegister"
            android:id="@+id/register_txt_password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_et_username" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/register_et_password" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>