<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal">

    <TextView
            android:text="@string/posts_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_txt_title" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="28dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" tools:layout_editor_absoluteY="35dp">

        <TextView
                android:text="@string/posts_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_date"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>

        <TextView
                android:text="@string/posts_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_author"
                app:layout_constraintStart_toEndOf="@+id/post_date"
                android:layout_marginStart="28dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.069"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>


    <TextView
            android:text="@string/posts_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/post_et_desc"
            android:layout_marginLeft="25dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="35dp">

        <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:layout_width="358dp"
                android:layout_height="52dp"
                android:inputType="text"
                android:hint="@string/prompt_comment"
                android:ems="10"
                android:id="@+id/comment_field"
                android:layout_marginStart="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragmentContainer" android:layout_marginEnd="36dp"
                app:layout_constraintHorizontal_bias="0.023" android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="@+id/fragmentContainer"/>

        <Button
                android:text="@string/action_comment"
                android:layout_width="138dp"
                android:layout_height="52dp"
                android:id="@+id/comment_btn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.926" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/comment_field" app:layout_constraintVertical_bias="1.0"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>