<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewPostActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_txt_title"
            android:text="@string/post_txt_title" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="256dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="159dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="148dp" android:layout_marginBottom="669dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:fontFamily="sans-serif-medium"
            app:layout_constraintHorizontal_bias="0.439" app:layout_constraintVertical_bias="0.641"/>
    <TextView
            android:text="@string/post_txt_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_txt_post_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="314dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/post_et_post_title"
            android:textAppearance="@style/TextAppearance.AppCompat" android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:ems="10"
            android:id="@+id/post_et_post_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="158dp"
            android:hint="@string/hint_post_title"
            android:autofillHints="" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/post_txt_post_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
            android:text="@string/post_txt_post_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_txt_post_desc"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="248dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/post_et_desc"
            android:textAppearance="@style/TextAppearance.AppCompat" android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="328dp"
            android:layout_height="202dp"
            android:inputType="textLongMessage"
            android:ems="10"
            android:id="@+id/post_et_desc"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            android:layout_marginBottom="228dp" app:layout_constraintBottom_toBottomOf="parent"
            android:autofillHints="" android:hint="@string/hint_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/post_btn_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_btn_post"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:fontFamily="sans-serif-medium"
            android:onClick="onNewPost"
            app:layout_constraintStart_toEndOf="@+id/post_et_post_title" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="47dp"
            app:layout_constraintTop_toBottomOf="@+id/post_txt_title" android:layout_marginBottom="54dp"
            app:layout_constraintBottom_toTopOf="@+id/post_et_desc" app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/post_et_desc" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>